--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -26,7 +26,7 @@
 
   .el-main {
     background: #f0f2f5;
-    padding: 10px 13px;
+    padding: 5px 13px;
     box-sizing: border-box;
     // min-width: 1020px;
     // 防止切换出现横向滚动条
@@ -34,7 +34,8 @@
 
     .main-box {
       width: 100%;
-      height: 93%;
+      max-height: 85%;
+      // height: 90%;
       // background-color: #f5f5f5;
       // box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
       // border-radius: 4px;
