--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -34,8 +34,7 @@
 
     .main-box {
       width: 100%;
-      max-height: 85%;
-      // height: 90%;
+      height: 100%;
       // background-color: #f5f5f5;
       // box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
       // border-radius: 4px;
