--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -29,19 +29,18 @@
     padding: 5px 13px;
     box-sizing: border-box;
     // min-width: 1020px;
-    // 防止切换出现横向滚动条
-    overflow-x: hidden;
+    // 防止切换出现滚动条
+    overflow: hidden;
 
     .main-box {
       width: 100%;
-      height: 100%;
       // background-color: #f5f5f5;
       // box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
       // border-radius: 4px;
       // padding: 20px;
       box-sizing: border-box;
       overflow: auto;
-      overflow-x: hidden !important;
+      overflow: hidden !important;
 
       &::-webkit-scrollbar {
         background-color: white;
