--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -11,13 +11,17 @@
 	.login-box {
 		width: 96%;
 		height: 94%;
-		background-color: hsla(0, 0%, 100%, 0.85);
+		// background-color: hsla(0, 0%, 100%, 0.85);
 		border-radius: 10px;
-		padding: 0 8% 0 50px;
+		padding: 0 8%; //0 50px;
 		box-sizing: border-box;
 		display: flex;
 		align-items: center;
 		justify-content: space-around;
+		// 大屏幕的样式
+		@media screen and (orientation: landscape) {
+			margin-left: -180px;
+		}
 
 		.login-left {
 			width: 800px;
@@ -38,12 +42,19 @@
 		}
 
 		.login-form {
-			width: 400px;
-			height: 460px;
-			padding: 10px 40px 35px 40px;
+			width: 342px;
+			height: 400px;
+			padding: 20px 10px;
 			border-radius: 10px;
+			background-color: hsla(0, 0%, 100%, 0.85);
+
 			-webkit-box-shadow: 2px 3px 7px rgb(0 0 0 / 20%);
 			box-shadow: 2px 3px 7px rgb(0 0 0 / 20%);
+			// 大屏幕的样式
+			@media screen and (orientation: landscape) {
+				width: 470px;
+				padding: 20px 40px;
+			}
 
 			.login-logo {
 				display: flex;
