--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -25,7 +25,7 @@
   }
 
   .el-main {
-    background: #f0f2f5;
+    background: #fdfeff;
     padding: 5px 13px;
     box-sizing: border-box;
     // min-width: 1020px;
